--- a/src/com/theblind/privatenotes/ui/PrivateNotesEditorForm.form
+++ b/src/com/theblind/privatenotes/ui/PrivateNotesEditorForm.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.theblind.privatenotes.ui.PrivateNotesEditor">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.theblind.privatenotes.ui.PrivateNotesEditorForm">
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="true" same-size-vertically="true" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
