--- a/src/com/theblind/privatenotes/ui/GonfigForm.form
+++ b/src/com/theblind/privatenotes/ui/GonfigForm.form
@@ -17,7 +17,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="私人属性设置"/>
+          <text value="属性设置"/>
         </properties>
       </component>
       <grid id="3b39e" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -36,15 +36,15 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="c44e0" class="javax.swing.JLabel" binding="emailLabel">
+              <component id="c44e0" class="javax.swing.JLabel" binding="userLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="邮箱:"/>
+                  <text value="用户:"/>
                 </properties>
               </component>
-              <component id="597d1" class="javax.swing.JTextField" binding="emailText">
+              <component id="597d1" class="javax.swing.JTextField" binding="userText">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
