--- a/src/com/theblind/privatenotes/ui/TextBox.form
+++ b/src/com/theblind/privatenotes/ui/TextBox.form
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.theblind.privatenotes.ui.TextBox">
-  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="panel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
@@ -9,9 +8,7 @@
     <border type="none"/>
     <children>
       <grid id="a5941" binding="topPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
+        <constraints/>
         <properties/>
         <border type="none"/>
         <children>
@@ -38,10 +35,10 @@
         </children>
       </grid>
       <scrollpane id="6563b" binding="scroll">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
+        <constraints/>
+        <properties>
+          <minimumSize width="104" height="150"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="b08b8" class="javax.swing.JEditorPane" binding="editorPane1" default-binding="true">
