--- a/src/com/theblind/privatenotes/ui/TextBox.form
+++ b/src/com/theblind/privatenotes/ui/TextBox.form
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.theblind.privatenotes.ui.TextBox">
-  <grid id="27dc6" binding="panel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+  <grid id="27dc6" binding="panel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="536" height="400"/>
     </constraints>
     <properties/>
-    <border type="none"/>
+    <border type="line"/>
     <children>
       <grid id="a5941" binding="topPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
-        <constraints/>
+        <constraints border-constraint="West"/>
         <properties/>
         <border type="none"/>
         <children>
@@ -35,10 +35,15 @@
         </children>
       </grid>
       <scrollpane id="6563b" binding="scroll">
-        <constraints/>
+        <constraints border-constraint="Center"/>
         <properties>
+          <enabled value="true"/>
+          <horizontalScrollBarPolicy value="30"/>
           <minimumSize width="104" height="150"/>
         </properties>
+        <clientProperties>
+          <html.disable class="java.lang.Boolean" value="false"/>
+        </clientProperties>
         <border type="none"/>
         <children>
           <component id="b08b8" class="javax.swing.JEditorPane" binding="editorPane1" default-binding="true">
