--- a/src/com/theblind/privatenotes/ui/TextBox.form
+++ b/src/com/theblind/privatenotes/ui/TextBox.form
@@ -1,57 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.theblind.privatenotes.ui.TextBox">
-  <grid id="27dc6" binding="panel" layout-manager="BorderLayout" hgap="0" vgap="0">
+  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="536" height="400"/>
+      <xy x="20" y="20" width="500" height="400"/>
     </constraints>
     <properties/>
-    <border type="line"/>
+    <border type="none"/>
     <children>
-      <grid id="a5941" binding="topPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
-        <constraints border-constraint="West"/>
+      <grid id="b394a" binding="topPanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="2237b" class="javax.swing.JButton" binding="refresh">
-            <constraints/>
+          <component id="14761" class="javax.swing.JButton" binding="refresh">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
             <properties>
               <icon value="icon/refresh.png"/>
               <text value=""/>
             </properties>
           </component>
-          <component id="2c121" class="javax.swing.JButton" binding="nav">
-            <constraints/>
+          <component id="bb84b" class="javax.swing.JButton" binding="nav">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
             <properties>
-              <horizontalAlignment value="0"/>
               <icon value="icon/location.png"/>
               <text value=""/>
-              <toolTipText value="定位"/>
-              <verticalAlignment value="0"/>
             </properties>
-            <clientProperties>
-              <hideActionText class="java.lang.Boolean" value="false"/>
-            </clientProperties>
           </component>
         </children>
       </grid>
-      <scrollpane id="6563b" binding="scroll">
-        <constraints border-constraint="Center"/>
-        <properties>
-          <enabled value="true"/>
-          <horizontalScrollBarPolicy value="30"/>
-          <minimumSize width="104" height="150"/>
-        </properties>
-        <clientProperties>
-          <html.disable class="java.lang.Boolean" value="false"/>
-        </clientProperties>
+      <scrollpane id="ea96d" binding="scroll">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
         <border type="none"/>
         <children>
-          <component id="b08b8" class="javax.swing.JEditorPane" binding="editorPane1" default-binding="true">
+          <component id="9bedf" class="javax.swing.JEditorPane" binding="editorPane1" default-binding="true">
             <constraints/>
-            <properties>
-              <editable value="true"/>
-              <enabled value="true"/>
-            </properties>
+            <properties/>
+            <clientProperties>
+              <JEditorPane.honorDisplayProperties class="java.lang.Boolean" value="false"/>
+              <JEditorPane.w3cLengthUnits class="java.lang.Boolean" value="false"/>
+            </clientProperties>
           </component>
         </children>
       </scrollpane>
